@@ -133,6 +133,11 @@ LY_DEFINE (ly_set_option, "ly:set-option", 1, 1, 0, (SCM var, SCM val),
     {
       lily_1_8_relative = false;
     }
+  else if (var == ly_symbol2scm ("debug-beam"))
+    {
+      extern bool debug_beam_quanting_flag;
+      debug_beam_quanting_flag = true;
+    }
   else
     {
       warning (_("Unknown internal option!"));
